tests/sqlite/ui-common/duplicate_section_mapping.stderr
error: sql_forge!: duplicated section mapping
  --> tests/sqlite/tmp-ui/duplicate_section_mapping.rs:12:14
   |
12 |             #filter = " WHERE id = 2 ",
   |              ^^^^^^
